--- a/Cursach1/Views/UserWindow.xaml
+++ b/Cursach1/Views/UserWindow.xaml
@@ -3,10 +3,22 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:Cursach1.ViewModels"
         xmlns:local="clr-namespace:Cursach1.Views"
         mc:Ignorable="d"
-        Title="UserWindow" Height="450" Width="800">
+        Title="UserWindow" 
+        Height="450" 
+        Width="800">
+
+    <Window.DataContext>
+        <vm:UserWindowViewModel />
+    </Window.DataContext>
+    
     <Grid>
-        
+        <Button 
+            Width="200"
+            Height="100"
+            Content="BACK"
+            Command="{Binding BackToLogin}"/>
     </Grid>
 </Window>
